Fix history server configuration
commit: https://github.com/kijiproject/bento-cluster/commit/952d3f8c891a09c63f5019c1c8554e995790d4ed